# ExternalServices/Rip/V1/RipSwagger.json
@@ -1,4 +1,4 @@
-// 20220809103315
+// 20220810123225
 // http://rip-sit1.vsskb.cz/swagger/v1/swagger.json
 
 {
@@ -2147,12 +2147,7 @@
             "nullable": true
           },
           "collateralRiskCharacteristics": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/LoanApplicationAssessment.CollateralRiskCharacteristics"
-            },
-            "description": "CollateralRiskCharacteristics",
-            "nullable": true
+            "$ref": "#/components/schemas/LoanApplicationAssessment.CollateralRiskCharacteristics"
           },
           "version": {
             "$ref": "#/components/schemas/LoanApplicationAssessment.SemanticVersion"
