# FOMS/FOMS.Api/Endpoints/SalesArrangement/GetLoanApplicationAssessment/Extensions.cs
@@ -23,9 +23,9 @@ internal static class Extensions
                 CIR = response.AssessmentDetail?.LoanApplicationLimit?.Cir,
                 DTI = response.AssessmentDetail?.LoanApplicationLimit?.Dti,
                 DSTI = response.AssessmentDetail?.LoanApplicationLimit?.Dsti,
-                LTC = response.CollateralRiskCharacteristics?.FirstOrDefault()?.Ltp,
-                LFTV = response.CollateralRiskCharacteristics?.FirstOrDefault()?.Ltfv,
-                LTV = response.CollateralRiskCharacteristics?.FirstOrDefault()?.Ltv
+                LTC = response.CollateralRiskCharacteristics?.Ltp,
+                LFTV = response.CollateralRiskCharacteristics?.Ltfv,
+                LTV = response.CollateralRiskCharacteristics?.Ltv
             },
             Households = response.HouseholdAssessmentDetail?.Select(h => new Dto.Household
             {
